# kimi-agent-sdk

./: README.md
.github/workflows/: go.yml  node.yml  vscode.yml
examples/go/contributor-hunter/: README.md  go.mod
examples/go/ralph-loop/: README.md  go.mod
examples/go/rumor-buster/: README.md  go.mod
examples/python/kaos/boxlite/: README.md
examples/python/message-logger/: README.md  main.py  pyproject.toml  utils.py
examples/python/project-tracker/: README.md  main.py  pyproject.toml
examples/python/quick-start/: README.md  main.py  pyproject.toml
go/: .golangci.yml  README.md  go.mod  go.sum  option.go  option_test.go  session.go  session_test.go  tool.go  tool_test.go  turn.go  turn_test.go
go/test/e2e/: session_test.go
go/test/integration/: session_test.go
go/test/integration/testdata/: mock_kimi  mock_kimi.go
go/wire/: message.go  message_test.go
go/wire/jsonrpc2/: README.md  codec.go  codec_test.go  error.go
go/wire/transport/: transport.go  transport_impl.go  transport_mock.go  transport_test.go
guides/: approval-requests.md  configuration.md  costs-and-usage.md  external-tools.md  quickstart.md  turn-cancellation.md
guides/python/: examples.md  quickstart.md
node/: .gitignore  pnpm-lock.yaml
node/agent_sdk/: README.md  config.ts  errors.ts  external-tool.ts  index.ts  package.json  paths.ts  protocol.ts  schema.ts  session.ts  storage.ts  tsup.config.ts
node/agent_sdk/cli/: commands.ts
node/agent_sdk/history/: context-extract.ts
node/vscode_extension/: README.md  esbuild.js  package.json
node/vscode_extension/scripts/: download-cli.js  ovsx-publish.js  vsix-package.js  vsix-publish.js
node/vscode_extension/shared/: bridge.ts  errors.ts  types.ts
node/vscode_extension/src/: bridge-handler.ts  extension.ts
node/vscode_extension/src/handlers/: chat.handler.ts  config.handler.ts  file.handler.ts  session.handler.ts  types.ts  workspace.handler.ts
node/vscode_extension/src/managers/: baseline.manager.ts  cli-downloader.ts  cli.manager.ts  file.manager.ts  index.ts  mcp.manager.ts
node/vscode_extension/webview-ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
node/vscode_extension/webview-ui/src/: App.tsx
node/vscode_extension/webview-ui/src/components/: ActionMenu.tsx  ApprovalDialog.tsx  ChatMessage.tsx  ChatStatus.tsx  ConfigErrorScreen.tsx  DisplayBlocks.tsx  Header.tsx  LoginScreen.tsx  MCPServersModal.tsx  Markdown.tsx  SessionList.tsx  SlashCommandMenu.tsx  ThinkingBlock.tsx  ThinkingButton.tsx  ToolRenderers.tsx
node/vscode_extension/webview-ui/src/components/inputarea/: InputArea.tsx
node/vscode_extension/webview-ui/src/hooks/: useAppInit.ts
node/vscode_extension/webview-ui/src/lib/: content.ts  media-utils.ts
node/vscode_extension/webview-ui/src/services/: bridge.ts  config.ts  recommended-mcp.ts
node/vscode_extension/webview-ui/src/stores/: approval.store.ts  chat.store.ts  event-handlers.ts  settings.store.ts
python/: .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  TODO.md  pyproject.toml
python/src/kimi_agent_sdk/: __init__.py  _aggregator.py  _approval.py  _prompt.py  _session.py
python/tests/: test_aggregator.py
(+2 files in other folders)
