[project]
name = "kimi-agent-sdk"
version = "0.0.2"
description = "A Python SDK for Kimi Agent (Kimi CLI)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["kimi", "agent", "sdk", "coding-agents", "llm", "automation"]
authors = [{ name = "Moonshot AI", email = "team@moonshot.ai" }]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "kimi-cli>=0.79,<0.80",
    "kosong>=0.38.0,<0.39.0",
]

[project.urls]
Homepage = "https://github.com/MoonshotAI/kimi-agent-sdk"
Repository = "https://github.com/MoonshotAI/kimi-agent-sdk"
Documentation = "https://github.com/MoonshotAI/kimi-agent-sdk/tree/main/README.md"
Changelog = "https://github.com/MoonshotAI/kimi-agent-sdk/blob/main/python/CHANGELOG.md"
Issues = "https://github.com/MoonshotAI/kimi-agent-sdk/issues"

[dependency-groups]
dev = [
    "inline-snapshot[black]>=0.31.1",
    "pdoc>=16.0.0",
    "pyright>=1.1.407",
    "ty>=0.0.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["kimi_agent_sdk"]
source-exclude = ["tests/**/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = [
    "src/**/*.py",
    "tests/**/*.py",
]
